--- a/my_resume/2023/resume_2023.tex
+++ b/my_resume/2023/resume_2023.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper,roman]{moderncv}
+\documentclass[12pt,a4paper,roman]{moderncv}
 % possible options include:
 % font size ('10pt', '11pt' and '12pt'), 
 % paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape')
@@ -37,14 +37,14 @@
 % personal data
 \name{Dr. Yu-Ting}{Shen}
 % \title{Curriculum Vitae}
-\address{}{}{}
+% \address{}{}{}
 % optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 % \phone[mobile]{909-839-3097}
 % \phone[fixed]{01234 123456}
-%\phone[fax]{+3~(456)~789~012}
+% \phone[fax]{+3~(456)~789~012}
 % \email{xpan1@swarthmore.edu}
 % \homepage{shawnpan.me}
-% \extrainfo{}
+\extrainfo{}
 %\photo[64pt][0.4pt]{picture}
 % '64pt' is the height the picture must be resized to, 
 % 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
@@ -60,21 +60,44 @@
 %\usepackage{multibib}
 %\newcites{book,misc}{{Books},{Others}}
   
+% \newcommand*{\customcventry}[7][.25em]{
+%   \begin{tabular}{@{}l} 
+%     {\bfseries #4}
+%   \end{tabular}
+%   \hfill% move it to the right
+%   \begin{tabular}{l@{}}
+%      {\bfseries #5}
+%   \end{tabular} \\
+%   \begin{tabular}{@{}l} 
+%     {\itshape #3}
+%   \end{tabular}
+%   \hfill% move it to the right
+%   \begin{tabular}{l@{}}
+%      {\itshape #2}
+%   \end{tabular}
+%   \ifx&#7&%
+%   \else{\\%
+%     \begin{minipage}{\maincolumnwidth}%
+%       \small#7%
+%     \end{minipage}}\fi%
+%   \par\addvspace{#1}}
+
 \newcommand*{\customcventry}[7][.25em]{
-  \begin{tabular}{@{}l} 
-    {\bfseries #4}
-  \end{tabular}
-  \hfill% move it to the right
-  \begin{tabular}{l@{}}
-     {\bfseries #5}
-  \end{tabular} \\
-  \begin{tabular}{@{}l} 
-    {\itshape #3}
-  \end{tabular}
-  \hfill% move it to the right
-  \begin{tabular}{l@{}}
-     {\itshape #2}
-  \end{tabular}
+  {\bfseries #3}\hfill{\bfseries #4}, {\bfseries #5} \hfill {\bfseries #2}
+  % \begin{tabular}{@{}l} 
+  %   {\bfseries #4}
+  % \end{tabular}
+  % \hfill% move it to the right
+  % \begin{tabular}{l@{}}
+  %    {\bfseries #5}
+  % \end{tabular} \\
+  % \begin{tabular}{@{}l} 
+  %   {\itshape #3}
+  % \end{tabular}
+  % \hfill% move it to the right
+  % \begin{tabular}{l@{}}
+  %    {\itshape #2}
+  % \end{tabular}
   \ifx&#7&%
   \else{\\%
     \begin{minipage}{\maincolumnwidth}%
@@ -107,7 +130,7 @@
 %\begin{CJK*}{UTF8}{gbsn}                          % to typeset your resume in Chinese using CJK
 %-----       resume       ---------------------------------------------------------
 \makecvtitle
-\vspace*{-28mm}
+\vspace*{-18mm}
 
 \begin{center}
 \begin{tabular}{ l l }
@@ -117,19 +140,19 @@
 \end{tabular}
 \end{center}
 
-\section{SKILLS}
-{
-\begin{itemize}
-    \item \textbf{Programming}: Python, SQL, C/C++, Spark, Scala, Bash shell script, VBA,
-    \item \textbf{Machine learning, Deep learning, Reinforcement learning}: Scikit-learn, Keras, TensorFlow, PyTorch, Gym, Stable-Baselines, Ray,
-    \item \textbf{Analysis \& Modeling}: ETL, EDA, Predictive modeling, Time series forecast, Anomaly detection, Monte Carlo simulation, RandomForest, XGBoost, LightGBM, LSTM, clustering, %NLP, Recommendation systems, Hypothesis test, A/B test, 
-    \item \textbf{Database}: SQL, Big Query, PostgreSQL, Incorta,
-    \item \textbf{visualization}: Matplotlib, Seaborn, Dash, Bokeh, Google DataStudio, Tableau, Power BI,
-    \item \textbf{Cloud}: Google Cloud Platform, Microsoft Azure, Amazon AWS, Cloudera,
-    \item \textbf{Others}: Git, Docker, Anaconda, Jupyter, Databrick, Visual Studio Code, IntelliJ, Jira, 
-    \item \textbf{Soft skills}: Collaboration, Communication, Problem-solving, Leadership,
-\end{itemize}
-}
+% \section{SKILLS}
+% {
+% \begin{itemize}
+%     \item \textbf{Programming}: Python, SQL, C/C++, Spark, Scala, Bash shell script, VBA,
+%     \item \textbf{Machine learning, Deep learning, Reinforcement learning}: Scikit-learn, Keras, TensorFlow, PyTorch, Gym, Stable-Baselines, Ray,
+%     \item \textbf{Analysis \& Modeling}: ETL, EDA, Predictive modeling, Time series forecast, Anomaly detection, Monte Carlo simulation, RandomForest, XGBoost, LightGBM, LSTM, clustering, %NLP, Recommendation systems, Hypothesis test, A/B test, 
+%     \item \textbf{Database}: SQL, Big Query, PostgreSQL, Incorta,
+%     \item \textbf{visualization}: Matplotlib, Seaborn, Dash, Bokeh, Google DataStudio, Tableau, Power BI,
+%     \item \textbf{Cloud}: Google Cloud Platform, Microsoft Azure, Amazon AWS, Cloudera,
+%     \item \textbf{Others}: Git, Docker, Anaconda, Jupyter, Databrick, Visual Studio Code, IntelliJ, Jira, 
+%     \item \textbf{Soft skills}: Collaboration, Communication, Problem-solving, Leadership,
+% \end{itemize}
+% }
 
 \section{EXPERIENCE}
 
@@ -145,14 +168,42 @@
 % \item Designed a Python-based universal interface to submit batch jobs to Google AI platform, GKE, Azure VMSS, Azure ML, AKS, on-premises cluster, and local docker container.
 % \item Collaborated cross-functionally to design and implement sophisticated analytical solutions at scale, delivered high-quality outcomes that exceeded project requirements and met stakeholder needs.
 % \item Led junior data scientists on the team and facilitated resolution of project-related challenges.
-\item Analyzed clients' supply chain raw data using Python and SQL to create data ETL using PySpark.
-\item Developed the data schema and table architecture for SCAS metadata model using the raw data from Oracle ERP.
-\item Implemented a reinforcement learning model to optimize supply chain management and inventory control. Lowered annual inventory by 26\% and increased annual turnover rate by 44\%.
-\item Built time series forcasting model using ETS, ARIMA and Random Forest and achieved model accuracy from 83\% to 97\% across products.
-\item Created interactive dashboard using Python Dash and deployed on Azure using Docker. Experienced and proficient in Tableau, Power BI, Google DataStudio to visualize and analyze data.
-\item Developed a Python API offering cross-platform capabilities for accessing storage blobs on GCP, Azure, and AWS.
-\item Developed a Sell script for submitting model training jobs to Google AI platform, Azure VMSS, and on-premises cluster.
-\item Led Junior data scientists on the team and facilitated resolution of project-related challenges
+%%%%
+% \item Analyzed clients' supply chain raw data using Python and SQL to create data ETL using PySpark.
+% \item Developed the data schema and table architecture for SCAS metadata model using the raw data from Oracle ERP.
+% \item Implemented a reinforcement learning model to optimize supply chain management and inventory control. Lowered annual inventory by 26\% and increased annual turnover rate by 44\%.
+% \item Built time series forcasting model using ETS, ARIMA and Random Forest and achieved model accuracy from 83\% to 97\% across products.
+% \item Created interactive dashboard using Python Dash and deployed on Azure using Docker. Experienced and proficient in Tableau, Power BI, Google DataStudio to visualize and analyze data.
+% \item Developed a Python API offering cross-platform capabilities for accessing storage blobs on GCP, Azure, and AWS.
+% \item Developed a Sell script for submitting model training jobs to Google AI platform, Azure VMSS, and on-premises cluster.
+% \item Led Junior data scientists on the team and facilitated resolution of project-related challenges
+%%%%
+\item Analyzed large supply chain datasets using \textbf{SQL} and \textbf{BigQuery} to identify root causes of business inefficiencies and performed data cleaning and ETL using \textbf{Python} and \textbf{Pandas}
+\item Generated data visualizations and prepared analytical reports using \textbf{Jupyter}, \textbf{Matplotlib}, \textbf{Seaborn}, and \textbf{Plotly} packages which improved data visibility and supply chain understanding 
+% show impact on the customer and products and numbers, how does this help?
+\item Built predictive models for demand forecasting using \textbf{Scikit-Learn}, \textbf{XGBoost}, \textbf{LightGBM}, and \textbf{TensorFlow} and achieved $r^2=0.92$ which facilitated operational planning
+% \item Trained time series forecasting models using a novel method with double random forest and achieve excess XXXXX accuracy.
+% \item Trained time series forecasting models using \textbf{ETS}, \textbf{ARIMA}, \textbf{Exponential-Smoothing} and \textbf{Prophet}
+% \item Built \textbf{anomaly detection} models to detect anomaly in orders and deliveries in supply chain --> what is the impact or achievement?
+\item Implemented \textbf{Reinforcement Learning} models to automate supply chain procurement and reduce cost by $\sim$30\% through inventory level and stock outs optimization
+%
+\item Automated machine learning training and inference workloads with Linux Shell and \textbf{Docker} using cloud platforms such as Azure ML Studio, Google AI Platform
+\item Developed internal Python libraries to facilitate data ETL across cloud and on-prem platforms such as \textbf{GCP}, \textbf{Azure}, \textbf{AWS} which improved developer efficiency by 3x and minimized security risks
+\item Created dashboards using \textbf{Google Data Studio}, \textbf{Tableau} and \textbf{Power BI} in collaboration with engineering, product, and executive teams which show supply chain metrics for stakeholders to help decision making
+\item Implemented industry standard procurement models including \textbf{EOQ}, \textbf{TPOP}, and \textbf{ROP} to compare and contrast behavior with trained AI models and reduced model evaluation time by 2x
+% \item Developed Shell script to submit training jobs to \textbf{Google AI platform}, \textbf{Azure VMSS} and \textbf{on-premises} clusters.
+% \item Led junior data scientists on the team and facilitated resolution of project-related challenges.
+%%%
+% \item Analyzed supply chain data from ERP system using \textbf{SQL} and \textbf{Python}, and create data ETL pipeline using \textbf{PySpark}.
+% \item Visualized supply chain trends and inefficiencies using \textbf{Matplotlib}, \textbf{Seaborn}, \textbf{Bokeh}, and \textbf{Plotly}.
+% \item Created interactive dashboards using Python \textbf{Dash} and deployed on \textbf{Azure} using \textbf{Docker}. Experienced and proficient in \textbf{Tableau}, \textbf{Google DataStudio}, and \textbf{Power BI}.
+% \item Implemented \textbf{Reinforcement Learning} models to optimize supply chain management and inventory control. Lowered annual inventory by 26\% and increased annual turnover rate by 44\%.
+% \item Built \textbf{anomaly detection} models for customers' orders and found 3\% $\sim$ 5\% anomaly across products.
+% \item Built \textbf{predictive models} to forecast customer's demand using ETS, ARIMA, Exponential-Smoothing (\textbf{statsmodels}), and \textbf{Prophet}. Achieved model accuracy ranging from 83\% to 97\% across products.
+% \item Improved 3\% $\sim$ 17\% accuracy in \textbf{time series forecasting} model results for different products by using RandomForest (\textbf{scikit-learn}), \textbf{XGBoost}, \textbf{LightGBM}, and LSTM (\textbf{TensorFlow}).
+% \item Developed a Python API offering cross-platform capabilities for accessing storage blobs on \textbf{GCP}, \textbf{Azure}, and \textbf{AWS}.
+% \item Developed a \textbf{Bash shell script} for submitting model training jobs to Google AI platform, Azure VMSS, and on-premises cluster.
+%%%
 \end{itemize}
 }
 % \item Analyzed customers' supply chain data using SQL/Python/Spark and built ensemble models for time series forecasting using ETS/ARIMA/RandomForest/XGboost/LSTM. The model accuracy ranges from 93\% to 100\% for various products for different customers.
@@ -201,17 +252,19 @@
 % \end{itemize}
 % }
 
-{\customcventry{2015/03 - 2018/03}{Data Scientist}{CERN (Organisation Europ\'{e}enne pour la Recherche Nucl\'{e}aire )}{Geneva, Switzerland}{}
+{\customcventry{2015/03 - 2018/03}{Data Scientist}{CERN}{Geneva, Switzerland}{}
+% {\customcventry{2015/03 - 2018/03}{Data Scientist}{CERN (Organisation Europ\'{e}enne pour la Recherche Nucl\'{e}aire )}{Geneva, Switzerland}{}
 {\begin{itemize}
-  \item Improved the electron isolation efficiency from 83\% to 99\% (a 19\% increase) by restricting the transverse energy and momentum distributions within a topological cone of 0.2 in spherical coordinate. The outcome set a new benchmark for all analysis at CERN.
-  \item Designed, optimized, and implemented a high-performing classification model for real leptons across multiple energy scales, leveraging both statistical and machine learning methodologies. This resulted in a significant improvement in the model's recall, which increased from 62\% to 98\%.
-  \item Conducted a comprehensive analysis of an extensive 400 TB dataset. Employed various modeling techniques, such as decision tree, regression, and statistical models, to deliver sophisticated solutions that effectively addressed complex project requirements.
+  % \item Improved the electron isolation efficiency from 83\% to 99\% (a 19\% increase) by restricting the transverse energy and momentum distributions within a topological cone of 0.2 in spherical coordinate. The outcome set a new benchmark for all analysis at CERN.
+  \item Designed, optimized, and implemented a high-performing \textbf{classification model} for real leptons across multiple energy scales, leveraging both statistical and machine learning methodologies which increased the model's recall from 62\% to 98\%
+  \item Improved electron isolation efficiency from 83\% to 99\% (a 19\% increase) which set a new benchmark for all analysis at CERN
+  \item Conducted a comprehensive analysis of an extensive 400 TB dataset and employed \textbf{decision tree}, \textbf{multi-dimensional regression}, and \textbf{statistical models} to deliver sophisticated solutions that effectively addressed complex project requirements
 \end{itemize}
 }
 
 {\customcventry{2009/07 - 2011/07}{Research Scientist}{Academia Sinica}{Taipei, Taiwan}{}
 {\begin{itemize}
-  \item Created a Monte Carlo simulation model using C++ and GEANT4 that resulted in a 20\% increase in precision.
+  \item Created a \textbf{Monte Carlo simulation} model using \textbf{C++} which increased 20\% precision
   % \item Developed decision tree and boosted ensemble models using C++ and ROOT, and applied 3-fold cross-validation to enhance particle classification accuracy by approximately 10\%.
   % \item Led cross-functional collaboration between different departments to establish remote control capabilities for experiments.
 \end{itemize}
@@ -227,9 +280,10 @@
 % \item Used decision tree based methods to classify background sources and reduced the major background events by 50\%.
 % \item Classified different background using decision tree based methods, automated the analysis results visualization processes, and reported the finding.
 
-{\customcventry{2006/12 - 2009/02}{R\&D Engineer}{TSMC (Taiwan Semiconductor Manufacturing Company)}{Hsinchu, Taiwan}{}
+{\customcventry{2006/12 - 2009/02}{R\&D Engineer}{TSMC}{Hsinchu, Taiwan}{}
+% {\customcventry{2006/12 - 2009/02}{R\&D Engineer}{TSMC (Taiwan Semiconductor Manufacturing Company)}{Hsinchu, Taiwan}{}
 {\begin{itemize}
-  \item Performed rigorous statistical analysis to develop models for advanced IC devices with cutting-edge technology.
+  \item Performed rigorous \textbf{statistical analysis} to develop device models for advanced IC devices with cutting-edge technology relating to semiconductor process nodes
   % \item Achieved a 40\% improvement in performance by designing and deploying an ETL and analysis pipeline on-premises.
   % \item Managed 7 projects by defining project scopes, allocating resources, scheduling and monitoring project progress, and coordinating cross-functional teams to ensure timely and high-quality project delivery.
 \end{itemize}
@@ -251,6 +305,21 @@
 % \item Built analysis pipeline to clean and visualize data.
 %\item Coordinated effectively with cross-functional teams and clients to resolve issues with tight deadlines.
 % \item Completed an urgent project 2 months ahead of the normal schedule and saved the contract.
+
+\section{SKILLS}
+{
+\begin{itemize}
+    \item \textbf{Programming}: Python, SQL, C/C++, Spark, Bash shell
+    \item \textbf{Machine learning, Deep learning}: Scikit-learn, Keras, TensorFlow, PyTorch
+    \item \textbf{Reinforcement learning}: Gym, Stable-Baselines, Ray
+    % \item \textbf{Analysis \& Modeling}: ETL, EDA, Predictive modeling, Time series forecast, Anomaly detection, Monte Carlo simulation, RandomForest, XGBoost, LightGBM, LSTM, clustering, %NLP, Recommendation systems, Hypothesis test, A/B test, 
+    % \item \textbf{Database}: SQL, Big Query
+    \item \textbf{Visualization}: Matplotlib, Seaborn, Dash, Bokeh, Google DataStudio, Tableau, Power BI
+    \item \textbf{Cloud}: Google Cloud Platform, Microsoft Azure
+    \item \textbf{Others}: Git, Docker, Jupyter, Databrick, Visual Studio Code, Jira
+    \item \textbf{Soft skills}: Collaboration, Communication, Problem-solving, Leadership
+\end{itemize}
+}
 
 \section{EDUCATION}
 {\customcventry{2011 - 2018}{Ph.D. in Physics}{University of Oklahoma}{Norman, OK}{}{}}
